// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter default scripts binary-expressions.src 1`] = `
CustomNumber {
  "value": 1.5,
}
`;

exports[`interpreter default scripts binary-expressions.src 2`] = `
CustomNumber {
  "value": 600,
}
`;

exports[`interpreter default scripts binary-expressions.src 3`] = `
CustomNumber {
  "value": 10,
}
`;

exports[`interpreter default scripts binary-expressions.src 4`] = `
CustomNumber {
  "value": 50,
}
`;

exports[`interpreter default scripts binary-expressions.src 5`] = `
CustomNumber {
  "value": 31457280,
}
`;

exports[`interpreter default scripts binary-expressions.src 6`] = `
CustomNumber {
  "value": 0,
}
`;

exports[`interpreter default scripts binary-expressions.src 7`] = `
CustomNumber {
  "value": 0,
}
`;

exports[`interpreter default scripts binary-expressions.src 8`] = `
CustomNumber {
  "value": 30,
}
`;

exports[`interpreter default scripts binary-expressions.src 9`] = `
CustomNumber {
  "value": 20,
}
`;

exports[`interpreter default scripts binary-expressions.src 10`] = `
CustomNumber {
  "value": 10,
}
`;

exports[`interpreter default scripts binary-expressions.src 11`] = `20`;

exports[`interpreter default scripts binary-expressions.src 12`] = `true`;

exports[`interpreter default scripts cast.src 1`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "was" => CustomNumber {
      "value": 1,
    },
    "foo" => CustomBoolean {
      "value": false,
    },
    "bar" => CustomString {
      "value": "xxx",
    },
  },
}
`;

exports[`interpreter default scripts cast.src 2`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "was" => CustomNumber {
      "value": 1,
    },
    "foo" => CustomBoolean {
      "value": false,
    },
    "bar" => CustomString {
      "value": "xxx",
    },
  },
}
`;

exports[`interpreter default scripts cast.src 3`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "was",
    },
    CustomBoolean {
      "value": false,
    },
    CustomNumber {
      "value": 4,
    },
  ],
}
`;

exports[`interpreter default scripts cast.src 4`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts cast.src 5`] = `
CustomNumber {
  "value": 61.23,
}
`;

exports[`interpreter default scripts cast.src 6`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts cast.src 7`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 8`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "bar",
    },
    CustomString {
      "value": "foo",
    },
    CustomBoolean {
      "value": false,
    },
  ],
}
`;

exports[`interpreter default scripts cast.src 9`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "foo" => CustomNumber {
      "value": 2,
    },
    "bar" => CustomNumber {
      "value": 123,
    },
  },
}
`;

exports[`interpreter default scripts cast.src 10`] = `
CustomString {
  "value": "was321",
}
`;

exports[`interpreter default scripts cast.src 11`] = `
CustomString {
  "value": "wasfoo",
}
`;

exports[`interpreter default scripts cast.src 12`] = `
CustomNumber {
  "value": 1,
}
`;

exports[`interpreter default scripts cast.src 13`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 14`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 15`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 16`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 17`] = `
CustomNumber {
  "value": 1,
}
`;

exports[`interpreter default scripts cast.src 18`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts cast.src 19`] = `
CustomString {
  "value": "abcabcabcabcabc",
}
`;

exports[`interpreter default scripts exit.src 1`] = `
CustomNumber {
  "value": 123,
}
`;

exports[`interpreter default scripts has-index.src 1`] = `
CustomString {
  "value": "1234",
}
`;

exports[`interpreter default scripts has-index.src 2`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts has-index.src 3`] = `
CustomString {
  "value": "moo",
}
`;

exports[`interpreter default scripts has-index.src 4`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts has-index.src 5`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts has-index.src 6`] = `
CustomString {
  "value": "bar",
}
`;

exports[`interpreter default scripts has-index.src 7`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts has-index.src 8`] = `
CustomString {
  "value": "987",
}
`;

exports[`interpreter default scripts has-index.src 9`] = `
CustomString {
  "value": "987",
}
`;

exports[`interpreter default scripts has-index.src 10`] = `
CustomString {
  "value": "987",
}
`;

exports[`interpreter default scripts has-index.src 11`] = `
CustomString {
  "value": "inner-bar",
}
`;

exports[`interpreter default scripts has-index.src 12`] = `
CustomString {
  "value": "inner-bar",
}
`;

exports[`interpreter default scripts has-index.src 13`] = `
CustomString {
  "value": "inner-bar",
}
`;

exports[`interpreter default scripts has-index.src 14`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts has-index.src 15`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts has-index.src 16`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts imports.src 1`] = `
CustomString {
  "value": "file imported",
}
`;

exports[`interpreter default scripts imports.src 2`] = `
CustomString {
  "value": "foo imported code",
}
`;

exports[`interpreter default scripts imports.src 3`] = `
CustomString {
  "value": "foo imported code native",
}
`;

exports[`interpreter default scripts instances.src 1`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts instances.src 2`] = `
CustomString {
  "value": "woo",
}
`;

exports[`interpreter default scripts list.src 1`] = `
CustomString {
  "value": "bar",
}
`;

exports[`interpreter default scripts list.src 2`] = `
CustomString {
  "value": "bar",
}
`;

exports[`interpreter default scripts list.src 3`] = `
CustomString {
  "value": "foo",
}
`;

exports[`interpreter default scripts list.src 4`] = `
CustomString {
  "value": "changed",
}
`;

exports[`interpreter default scripts manipulation.src 1`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "see" => CustomString {
      "value": "124578",
    },
    "foo" => CustomNumber {
      "value": 123,
    },
    "bar" => CustomBoolean {
      "value": true,
    },
    "lore" => CustomString {
      "value": "moo",
    },
  },
}
`;

exports[`interpreter default scripts manipulation.src 2`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "123456",
    },
    CustomString {
      "value": "xxx",
    },
    CustomNumber {
      "value": 123,
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts manipulation.src 3`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "foo" => CustomNumber {
      "value": 123,
    },
    "bar" => CustomBoolean {
      "value": true,
    },
    "lore" => CustomString {
      "value": "moo",
    },
  },
}
`;

exports[`interpreter default scripts manipulation.src 4`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "xxx",
    },
    CustomNumber {
      "value": 123,
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts manipulation.src 5`] = `
CustomNumber {
  "value": 123,
}
`;

exports[`interpreter default scripts manipulation.src 6`] = `
CustomString {
  "value": "foo",
}
`;

exports[`interpreter default scripts manipulation.src 7`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "bar" => CustomBoolean {
      "value": true,
    },
    "lore" => CustomString {
      "value": "moo",
    },
  },
}
`;

exports[`interpreter default scripts manipulation.src 8`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "xxx",
    },
    CustomNumber {
      "value": 123,
    },
  ],
}
`;

exports[`interpreter default scripts manipulation.src 9`] = `
CustomMap {
  "isInstance": false,
  "value": Map {
    "foo" => CustomNumber {
      "value": 123,
    },
    "bar" => CustomBoolean {
      "value": true,
    },
    "lore" => CustomString {
      "value": "moo",
    },
  },
}
`;

exports[`interpreter default scripts manipulation.src 10`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "xxx",
    },
    CustomNumber {
      "value": 123,
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts negation.src 1`] = `
CustomNumber {
  "value": 2,
}
`;

exports[`interpreter default scripts negation.src 2`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomNumber {
      "value": -1,
    },
    CustomNumber {
      "value": 2,
    },
    CustomNumber {
      "value": 0,
    },
  ],
}
`;

exports[`interpreter default scripts obj-init.src 1`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts obj-init.src 2`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomMap {
      "isInstance": false,
      "value": Map {
        "another" => CustomString {
          "value": "123",
        },
      },
    },
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts print.src 1`] = `
CustomNumber {
  "value": 123,
}
`;

exports[`interpreter default scripts simple-object.src 1`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts simple-object.src 2`] = `null`;

exports[`interpreter default scripts slice.src 1`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "gad",
    },
  ],
}
`;

exports[`interpreter default scripts unary.src 1`] = `true`;

exports[`interpreter default scripts unary.src 2`] = `null`;

exports[`interpreter default scripts unary.src 3`] = `true`;

exports[`interpreter default scripts unary.src 4`] = `true`;

exports[`interpreter default scripts unary.src 5`] = `
CustomNumber {
  "value": 1,
}
`;

exports[`interpreter default scripts unary.src 6`] = `
CustomNumber {
  "value": -3,
}
`;
